<resources>
    <string name="app_name">3DMyAdmin</string>
    <string name="app_dev">Admin panel for 3D Products. v1.0</string>
    <string name="button_login">Sign In</string>
    <string name="enter_email">Enter E-mail</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_title">hPanel for 3D Products</string>
    <string name="title_activity_panel">PanelActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_additem">Add Item</string>
    <string name="title_other">Settings</string>
    <string name="register_for_hpanel_title">Register for hPanel</string>
    <string name="sign_up">Sign up</string>
    <string name="image_url">Image URL</string>
    <string name="model_name">Model Name</string>
    <string name="model_no">Model No</string>
    <string name="model_price">Model Price</string>
    <string name="add_product">Add Product</string>
    <string name="logout_btn">Logout</string>
    <string name="user_name_text">Welcome Username</string>
    <string name="products_sayi">Products Sayi</string>
    <string name="image_url_text">Select Image :</string>
    <string name="http_link_start">http://</string>
    <string name="select_image_from_storage">Select image from storage</string>

    <string-array name="vip">
        <item>false</item>
        <item>true</item>
    </string-array>
</resources>
